[package]
authors = ["Alexey Pyzhianov <alex.pyzhianov@gmail.com>"]
edition = "2018"
name = "hello"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "hello-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "hello-client"
path = "src/client.rs"

[dependencies]
prost = "0.6"
tokio = {version = "0.2", features = ["macros"]}
tonic = "0.3"

[build-dependencies]
tonic-build = "0.3"
